[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://objetos/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://objetos/player/itens/item.tscn" type="PackedScene" id=3]
[ext_resource path="res://objetos/spikes/spikes.tscn" type="PackedScene" id=4]
[ext_resource path="res://objetos/laser/laserRay.tscn" type="PackedScene" id=5]
[ext_resource path="res://objetos/flag/flag.tscn" type="PackedScene" id=6]
[ext_resource path="res://tiles.res" type="TileSet" id=7]
[ext_resource path="res://interface/UI.tscn" type="PackedScene" id=8]

[node name="level" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="player" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 112, 544 )
collision_mask = 3
_sections_unfolded = [ "Collision", "Pickable", "collision" ]

[node name="collectabels" type="Node" parent="." index="1"]

editor/display_folded = true
_sections_unfolded = [ "Pause" ]

[node name="luneta" parent="collectabels" index="0" instance=ExtResource( 3 )]

position = Vector2( 32, 560 )
item = 6

[node name="item" parent="collectabels" index="1" instance=ExtResource( 3 )]

position = Vector2( -64, 560 )
item = 1

[node name="item2" parent="collectabels" index="2" instance=ExtResource( 3 )]

position = Vector2( -160, 560 )

[node name="item3" parent="collectabels" index="3" instance=ExtResource( 3 )]

position = Vector2( -256, 560 )

[node name="item4" parent="collectabels" index="4" instance=ExtResource( 3 )]

position = Vector2( -160, 400 )
item = 7

[node name="item6" parent="collectabels" index="5" instance=ExtResource( 3 )]

position = Vector2( -64, 400 )
item = 5

[node name="item7" parent="collectabels" index="6" instance=ExtResource( 3 )]

position = Vector2( 32, 400 )
item = 5

[node name="item8" parent="collectabels" index="7" instance=ExtResource( 3 )]

position = Vector2( 128, 400 )
item = 5

[node name="item9" parent="collectabels" index="8" instance=ExtResource( 3 )]

position = Vector2( 96, 240 )
item = 7

[node name="item10" parent="collectabels" index="9" instance=ExtResource( 3 )]

position = Vector2( 0, 240 )
item = 2

[node name="item11" parent="collectabels" index="10" instance=ExtResource( 3 )]

position = Vector2( -96, 240 )
item = 1

[node name="item12" parent="collectabels" index="11" instance=ExtResource( 3 )]

position = Vector2( -192, 240 )
item = 1

[node name="obstacles" type="Node" parent="." index="2"]

_sections_unfolded = [ "Pause" ]

[node name="spike" parent="obstacles" index="0" instance=ExtResource( 4 )]

position = Vector2( 1058.04, 528 )
scale = Vector2( 0.641681, 0.5 )

[node name="spike2" parent="obstacles" index="1" instance=ExtResource( 4 )]

position = Vector2( 1282.98, 528 )
scale = Vector2( 0.641681, 0.5 )

[node name="spike3" parent="obstacles" index="2" instance=ExtResource( 4 )]

position = Vector2( 1450.97, 1010.36 )
scale = Vector2( 13.5605, 0.5 )

[node name="spike4" parent="obstacles" index="3" instance=ExtResource( 4 )]

position = Vector2( 1315.06, 880.724 )
scale = Vector2( 3.92268, 0.5 )

[node name="spike5" parent="obstacles" index="4" instance=ExtResource( 4 )]

position = Vector2( 689.018, 945.533 )
scale = Vector2( 0.460067, 2.40652 )

[node name="spike6" parent="obstacles" index="5" instance=ExtResource( 4 )]

position = Vector2( 716.227, 1008.63 )
scale = Vector2( 1.31035, 0.434772 )

[node name="spike7" parent="obstacles" index="6" instance=ExtResource( 4 )]

position = Vector2( 802.063, 49.4956 )
scale = Vector2( 5.66754, 0.434772 )

[node name="spike8" parent="obstacles" index="7" instance=ExtResource( 4 )]

position = Vector2( 817.37, -17.5046 )
scale = Vector2( 1.31035, 0.434772 )

[node name="spike9" parent="obstacles" index="8" instance=ExtResource( 4 )]

position = Vector2( 1170.22, 50.4956 )
scale = Vector2( 2.39942, 0.434772 )

[node name="spike10" parent="obstacles" index="9" instance=ExtResource( 4 )]

position = Vector2( 2051.29, 465.697 )
scale = Vector2( 3.95979, 0.434772 )

[node name="spike11" parent="obstacles" index="10" instance=ExtResource( 4 )]

position = Vector2( 2208.5, 500.697 )
scale = Vector2( 0.984376, 0.434772 )

[node name="out_of_level" parent="obstacles" index="11" instance=ExtResource( 4 )]

position = Vector2( 776, -464 )
scale = Vector2( 16.25, 0.434772 )

[node name="laser2" parent="obstacles" index="12" instance=ExtResource( 5 )]

position = Vector2( 1582.6, 61.6333 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="laser3" parent="obstacles" index="13" instance=ExtResource( 5 )]

position = Vector2( 363.341, 676.106 )
rotation = 3.14159

[node name="flag" parent="." index="3" instance=ExtResource( 6 )]

position = Vector2( 2384, 544 )

[node name="TileMap" type="TileMap" parent="." index="4"]

position = Vector2( 1.85071, 3.05176e-05 )
mode = 0
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 3
collision_mask = 3
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -851986, 0, 0, -851985, 0, 0, -851984, -1610612736, 0, -851983, -1610612736, 0, -851982, -1610612736, 0, -851981, 0, 0, -917496, 0, 0, -917465, 0, 0, -786450, 0, 0, -786449, 1610612737, 0, -786448, 1610612737, 0, -786447, 1610612737, 0, -786446, 1610612737, 0, -786445, 0, 0, -851960, 0, 0, -851929, 0, 0, -720914, 0, 0, -720909, 0, 0, -720907, 0, 0, -720906, 0, 0, -720905, 0, 0, -720904, 0, 0, -720903, 0, 0, -720902, 0, 0, -720901, 0, 0, -720900, 0, 0, -720899, 0, 0, -720898, 0, 0, -720897, 0, 0, -786432, 0, 0, -786431, 0, 0, -786430, 0, 0, -786429, -1610612736, 0, -786428, -1610612736, 0, -786427, -1610612736, 0, -786426, -1610612736, 0, -786425, -1610612736, 0, -786424, -1610612736, 0, -786393, 0, 0, -786392, 0, 0, -786391, 0, 0, -786390, 0, 0, -786389, 0, 0, -786388, 0, 0, -786387, 0, 0, -786386, 0, 0, -786385, 0, 0, -786384, 0, 0, -786383, 0, 0, -786382, 0, 0, -786381, 0, 0, -786380, 0, 0, -786379, 0, 0, -786378, 0, 0, -786377, 0, 0, -786376, 0, 0, -786375, 0, 0, -786374, 0, 0, -786373, 0, 0, -786372, 0, 0, -786371, 0, 0, -786370, 0, 0, -786369, 0, 0, -786368, 0, 0, -786367, 0, 0, -786366, 0, 0, -786365, 0, 0, -786364, 0, 0, -786363, 0, 0, -786362, 0, 0, -786361, 0, 0, -786360, 0, 0, -655378, 0, 0, -655373, 0, 0, -655371, 0, 0, -720824, 0, 0, -589842, 0, 0, -589837, 0, 0, -589835, 0, 0, -655288, 0, 0, -524306, 0, 0, -524301, 0, 0, -524299, 0, 0, -589752, 0, 0, -458770, 0, 0, -458765, 0, 0, -458763, 0, 0, -524216, 0, 0, -393234, 0, 0, -393229, 0, 0, -393227, 0, 0, -458680, 0, 0, -327698, 0, 0, -327693, 0, 0, -327691, 0, 0, -393192, 0, 0, -393191, 0, 0, -393190, 0, 0, -393144, 0, 0, -262162, 0, 0, -262157, 0, 0, -262155, 0, 0, -327656, 0, 0, -327654, 0, 0, -327608, 0, 0, -196626, 0, 0, -196621, 0, 0, -196619, 0, 0, -262120, 0, 0, -262118, 0, 0, -262072, 0, 0, -131090, 0, 0, -131085, 0, 0, -131083, 0, 0, -196584, 0, 0, -196582, 0, 0, -196536, 0, 0, -65554, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131000, 0, 0, -18, 0, 0, -65512, 1610612737, 0, -65511, 1610612737, 0, -65510, 1610612737, 0, -65464, 0, 0, 65518, 0, 0, 72, 0, 0, 131054, 0, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 65566, 1, 0, 65570, 1, 0, 65571, 1, 0, 65572, 1, 0, 65573, 1, 0, 65574, 1, 0, 65608, 0, 0, 196590, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, -1610612736, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131091, -1610612736, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, -1073741824, 0, 131106, 0, 0, 131107, -1610612736, 0, 131108, -1610612736, 0, 131109, -1610612736, 0, 131110, -1610612736, 0, 131114, 0, 0, 131115, 0, 0, 131116, 0, 0, 131117, 0, 0, 131118, 0, 0, 131119, 0, 0, 131120, 0, 0, 131121, 0, 0, 131122, 0, 0, 131123, 0, 0, 131124, 0, 0, 131125, 0, 0, 131126, 0, 0, 131127, 0, 0, 131128, 0, 0, 131129, 0, 0, 131130, 0, 0, 131131, 0, 0, 131139, 0, 0, 131140, 0, 0, 131141, 0, 0, 131142, 0, 0, 131143, 0, 0, 131144, 0, 0, 262126, 0, 0, 262131, 0, 0, 196619, 0, 0, 196627, -1610612736, 0, 196638, 0, 0, 196642, 0, 0, 196646, -1610612736, 0, 196650, 0, 0, 196667, 0, 0, 196675, 0, 0, 327662, 0, 0, 327667, 0, 0, 327669, 1610612736, 0, 327670, 1610612736, 0, 327671, 1610612736, 0, 327672, 1610612736, 0, 327673, 1610612736, 0, 327674, 1610612736, 0, 327675, 1610612736, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, -1610612736, 0, 262149, -1610612736, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262163, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 1610612736, 0, 262186, 0, 0, 262187, 0, 0, 262188, 0, 0, 262189, 0, 0, 262190, 0, 0, 262191, 0, 0, 262192, 0, 0, 262193, 0, 0, 262194, 0, 0, 262195, 0, 0, 262196, 0, 0, 262197, 0, 0, 262198, 0, 0, 262199, 0, 0, 262200, 0, 0, 262201, 0, 0, 262202, 0, 0, 262203, 0, 0, 262211, 0, 0, 262212, 0, 0, 262213, 0, 0, 262214, 0, 0, 262215, 0, 0, 262216, 0, 0, 262217, 0, 0, 262218, 0, 0, 262219, 0, 0, 262220, 0, 0, 262221, 0, 0, 393198, 0, 0, 393203, 0, 0, 393205, 1610612736, 0, 327699, 0, 0, 327701, 0, 0, 327757, 0, 0, 458734, 0, 0, 458739, 0, 0, 458741, 1610612736, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393293, 0, 0, 524270, 0, 0, 524275, 0, 0, 524277, 1610612736, 0, 524280, -1610612736, 0, 524283, -1610612736, 0, 524286, -1610612736, 0, 458753, -1610612736, 0, 458756, -1610612736, 0, 458829, 0, 0, 589806, 0, 0, 589811, 0, 0, 589813, 1610612736, 0, 589816, -1610612736, 0, 589817, -1610612736, 0, 589818, -1610612736, 0, 589819, -1610612736, 0, 589820, -1610612736, 0, 589821, -1610612736, 0, 589822, -1610612736, 0, 589823, -1610612736, 0, 524288, -1610612736, 0, 524289, -1610612736, 0, 524290, -1610612736, 0, 524291, -1610612736, 0, 524292, -1610612736, 0, 524293, -1610612736, 0, 524365, 0, 0, 655342, 0, 0, 655347, 0, 0, 655349, 1610612736, 0, 589901, 0, 0, 720878, 0, 0, 720883, 0, 0, 720885, 1610612736, 0, 655367, -1610612736, 0, 655368, -1610612736, 0, 655379, -2147483648, 0, 655380, -2147483648, 0, 655381, 0, 0, 655437, 0, 0, 786414, 0, 0, 786419, 0, 0, 786421, 1610612736, 0, 720902, -1610612736, 0, 720903, -1610612736, 0, 720915, 0, 0, 720917, 0, 0, 720973, 0, 0, 851950, 0, 0, 851955, 0, 0, 851957, 1610612736, 0, 851961, -1610612736, 0, 851964, -1610612736, 0, 851967, -1610612736, 0, 786434, -1610612736, 0, 786437, -1610612736, 0, 786438, -1610612736, 0, 786451, 0, 0, 786453, 0, 0, 786509, 0, 0, 917486, 0, 0, 917491, 0, 0, 917493, 1610612736, 0, 917496, -1610612736, 0, 917497, -1610612736, 0, 917498, -1610612736, 0, 917499, -1610612736, 0, 917500, -1610612736, 0, 917501, -1610612736, 0, 917502, -1610612736, 0, 917503, -1610612736, 0, 851968, -1610612736, 0, 851969, -1610612736, 0, 851970, -1610612736, 0, 851971, -1610612736, 0, 851972, -1610612736, 0, 851973, -1610612736, 0, 851987, 0, 0, 851989, 0, 0, 852045, 0, 0, 983022, 0, 0, 983027, 0, 0, 983029, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917564, 1, 0, 917565, 1, 0, 917566, 1, 0, 917567, 1, 0, 917568, 1, 0, 917569, 1, 0, 917570, 1, 0, 917571, 1, 0, 917581, 0, 0, 917582, 0, 0, 1048558, 0, 0, 1048563, 0, 0, 1048565, 0, 0, 1048566, -1610612736, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983060, 0, 0, 983100, -1610612736, 0, 983101, -1610612736, 0, 983102, -1610612736, 0, 983103, -1610612736, 0, 983104, -1610612736, 0, 983105, -1610612736, 0, 983106, -1610612736, 0, 983107, -1610612736, 0, 983108, 1, 0, 983109, 1, 0, 983118, 0, 0, 1114094, 0, 0, 1114099, 0, 0, 1114101, 0, 0, 1114102, -1610612736, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048596, 0, 0, 1048608, 1, 0, 1048609, 1, 0, 1048615, 1, 0, 1048616, 1, 0, 1048635, -1610612736, 0, 1048636, -1610612736, 0, 1048643, -1610612736, 0, 1048644, -1610612736, 0, 1048645, -1610612736, 0, 1048654, 0, 0, 1179630, 0, 0, 1179635, 0, 0, 1179637, 0, 0, 1179638, -1610612736, 0, 1179641, -1610612736, 0, 1179644, -1610612736, 0, 1179647, -1610612736, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114132, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114171, -1610612736, 0, 1114181, -1610612736, 0, 1114190, 0, 0, 1245166, 0, 0, 1245171, 0, 0, 1245173, 1610612736, 0, 1245174, 1610612736, 0, 1245175, 1610612736, 0, 1245176, 1610612736, 0, 1245177, 1610612736, 0, 1245178, 1610612736, 0, 1245179, 1610612736, 0, 1245180, 0, 0, 1245181, 1610612736, 0, 1245182, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1179689, 0, 0, 1179690, 0, 0, 1179691, 0, 0, 1179692, 0, 0, 1179693, 0, 0, 1179694, -1610612736, 0, 1179695, -1610612736, 0, 1179696, 0, 0, 1179697, 0, 0, 1179707, 0, 0, 1179717, 0, 0, 1179718, 0, 0, 1179719, 0, 0, 1179720, 0, 0, 1179721, 0, 0, 1179722, 0, 0, 1179723, 0, 0, 1179724, 0, 0, 1179725, 0, 0, 1179726, 0, 0, 1310702, 0, 0, 1310707, 0, 0, 1245233, 0, 0, 1245243, 0, 0, 1376238, 0, 0, 1376243, 0, 0, 1376245, 0, 0, 1376246, 0, 0, 1376247, 0, 0, 1376248, 0, 0, 1376249, 0, 0, 1376250, 0, 0, 1376251, 0, 0, 1376252, 0, 0, 1376253, 0, 0, 1376254, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1310761, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1310764, 0, 0, 1310765, 0, 0, 1310767, 0, 0, 1310768, 0, 0, 1310769, 0, 0, 1310779, 0, 0, 1310780, 0, 0, 1310781, 0, 0, 1441774, 0, 0, 1441779, 0, 0, 1441781, 0, 0, 1376301, 0, 0, 1376303, 0, 0, 1376317, 0, 0, 1507310, 0, 0, 1507315, 0, 0, 1507317, 0, 0, 1441837, 0, 0, 1441839, 0, 0, 1441853, 0, 0, 1572846, 0, 0, 1572851, 0, 0, 1572853, 0, 0, 1507373, 0, 0, 1507375, 0, 0, 1507389, 0, 0, 1638382, 0, 0, 1638387, 0, 0, 1638389, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572911, 0, 0, 1572925, 0, 0, 1703918, 0, 0, 1703923, 0, 0, 1703925, 0, 0, 1638419, 0, 0, 1638431, 0, 0, 1638437, 0, 0, 1638447, 0, 0, 1638461, 0, 0, 1769454, 0, 0, 1769459, 0, 0, 1769461, 0, 0, 1703955, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703959, 0, 0, 1703960, 0, 0, 1703961, 0, 0, 1703962, 0, 0, 1703963, 0, 0, 1703964, 0, 0, 1703965, 0, 0, 1703966, 0, 0, 1703967, 0, 0, 1703973, 0, 0, 1703974, 0, 0, 1703975, 0, 0, 1703976, 0, 0, 1703977, 0, 0, 1703978, 0, 0, 1703979, 0, 0, 1703980, 0, 0, 1703981, 0, 0, 1703983, 0, 0, 1703997, 0, 0, 1834990, 0, 0, 1834995, 0, 0, 1834997, 0, 0, 1769491, 0, 0, 1769492, -1610612736, 0, 1769493, -1610612735, 0, 1769509, 1610612737, 0, 1769510, 1610612737, 0, 1769511, 1610612737, 0, 1769512, 1610612737, 0, 1769513, 1610612737, 0, 1769514, 1610612737, 0, 1769515, 1610612737, 0, 1769516, 1610612737, 0, 1769517, 0, 0, 1769518, -1610612736, 0, 1769519, 0, 0, 1769533, 0, 0, 1900526, 0, 0, 1900531, 0, 0, 1900532, 0, 0, 1900533, 0, 0, 1835027, -1610612736, 0, 1835028, -1610612736, 0, 1835029, -1610612735, 0, 1835069, 0, 0, 1966062, 0, 0, 1900563, -1610612736, 0, 1900564, -1610612736, 0, 1900565, -1610612735, 0, 1900605, 0, 0, 2031598, 0, 0, 1966099, -1610612736, 0, 1966100, -1610612736, 0, 1966101, -1610612735, 0, 1966141, 0, 0, 2097134, 0, 0, 2031635, -1610612736, 0, 2031636, -1610612736, 0, 2031637, -1610612735, 0, 2031638, 1, 0, 2031639, 1, 0, 2031648, 1, 0, 2031649, 1, 0, 2031650, 1, 0, 2031651, 1, 0, 2031652, 1, 0, 2031653, 1, 0, 2031654, 1, 0, 2031655, 1, 0, 2031656, 1, 0, 2031657, 1, 0, 2031658, 1, 0, 2031659, 1, 0, 2031660, 1, 0, 2031661, 1, 0, 2031662, 1, 0, 2031663, 1, 0, 2031664, 1, 0, 2031665, 1, 0, 2031666, 1, 0, 2031667, 1, 0, 2031668, 1, 0, 2031669, 1, 0, 2031670, 1, 0, 2031671, 1, 0, 2031672, 1, 0, 2031673, 1, 0, 2031674, 1, 0, 2031677, 0, 0, 2162670, 0, 0, 2162675, 0, 0, 2162676, 0, 0, 2162677, 0, 0, 2162678, 0, 0, 2162679, 0, 0, 2162680, 0, 0, 2162681, 0, 0, 2162682, 0, 0, 2162683, 0, 0, 2162684, 0, 0, 2162685, 0, 0, 2162686, 0, 0, 2162687, 0, 0, 2097152, 0, 0, 2097153, 0, 0, 2097154, 0, 0, 2097155, 0, 0, 2097156, 0, 0, 2097157, 0, 0, 2097158, 0, 0, 2097159, 0, 0, 2097160, 0, 0, 2097161, 0, 0, 2097162, 0, 0, 2097163, 0, 0, 2097164, 0, 0, 2097165, 0, 0, 2097166, 0, 0, 2097167, 0, 0, 2097168, 0, 0, 2097169, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097172, -1610612736, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097178, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2097182, 0, 0, 2097183, 0, 0, 2097184, 0, 0, 2097185, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097195, 0, 0, 2097196, 0, 0, 2097197, 1610612736, 0, 2097198, 1610612736, 0, 2097199, 1610612736, 0, 2097200, 0, 0, 2097201, 0, 0, 2097202, 0, 0, 2097203, 0, 0, 2097204, 0, 0, 2097205, 0, 0, 2097206, 0, 0, 2097207, 0, 0, 2097208, 0, 0, 2097209, 0, 0, 2097210, 0, 0, 2097211, 0, 0, 2097212, 0, 0, 2097213, 0, 0, 2228206, 0, 0, 2228207, 0, 0, 2228208, 0, 0, 2228209, 0, 0, 2228210, 0, 0, 2228211, 0, 0 )
_sections_unfolded = [ "Cell", "Collision" ]
__meta__ = {
"_edit_lock_": true
}

[node name="UI" parent="." index="5" instance=ExtResource( 8 )]

editor/display_folded = true

[connection signal="changed_items" from="player" to="UI" method="_on_player_changed_items"]

[connection signal="level_end" from="flag" to="." method="_on_flag_level_end"]


[editable path="UI"]
